--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@datocms/cma-client-node": "^1.0.0",
     "@expo/webpack-config": "~0.16.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
@@ -19,8 +21,10 @@
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-pager-view": "^5.4.24",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.7",
     "styled-components": "^5.3.5",
     "webpack-dev-server": "~3.11.0"
